Fixed bootstrap/simple_form checkbox conflict.

--- a/config/locales/devise_views.pl.yml
+++ b/config/locales/devise_views.pl.yml
@@ -4,6 +4,9 @@ pl:
       new:
         create_account: "Załóż konto"
         heading: "Rejestracja"
+    sessions:
+      new:
+        heading: "Logowanie"
     shared:
       links:
         confirmation_not_received: "Nie otrzymałeś instrukcji potwierdzenia konta?"
