Game policy, action link helper.

--- a/config/locales/routes.pl.yml
+++ b/config/locales/routes.pl.yml
@@ -3,6 +3,7 @@ pl:
     cancel: "anuluj"
     confirmation: "potwierdz"
     edit: "edytuj"
+    games: "gry"
     new: "dodaj"
     password: "haslo"
     sign_in: "zaloguj"
