--- a/config/locales/routes.pl.yml
+++ b/config/locales/routes.pl.yml
@@ -5,6 +5,7 @@ pl:
     edit: "edytuj"
     games: "gry"
     new: "dodaj"
+    nodes: "wezel"
     password: "haslo"
     sign_in: "zaloguj"
     sign_out: "wyloguj"
