--- a/config/locales/routes.pl.yml
+++ b/config/locales/routes.pl.yml
@@ -2,10 +2,11 @@ pl:
   routes:
     cancel: "anuluj"
     confirmation: "potwierdz"
+    edges: "krawedzie"
     edit: "edytuj"
     games: "gry"
     new: "dodaj"
-    nodes: "wezel"
+    nodes: "wezly"
     password: "haslo"
     sign_in: "zaloguj"
     sign_out: "wyloguj"
