First node can be set.

--- a/config/locales/application.pl.yml
+++ b/config/locales/application.pl.yml
@@ -4,6 +4,7 @@ pl:
     destroy: "Usuń"
     edit: "Edytuj"
     new: "Dodaj"
+    set_as_first: "Ustaw jako pierwszy"
     show: "Pokaż"
   application:
     header:
