Changed classes names: Node -> Paragraph, Edge -> Choice.

--- a/config/locales/choices.pl.yml
+++ b/config/locales/choices.pl.yml
@@ -1,10 +1,10 @@
 pl:
   activerecord:
     attributes:
-      edge:
+      choice:
         content: "Treść"
         head: "Fragment docelowy"
-  edges:
+  choices:
     new:
       heading: "Dodawanie odpowiedzi"
     edit:
