--- a/config/locales/devise.pl.yml
+++ b/config/locales/devise.pl.yml
@@ -7,10 +7,10 @@ pl:
     failure:
       already_authenticated: 'Jesteś już zalogowany.'
       inactive: 'Twoje konto jeszcze nie zostało aktywowane.'
-      invalid: 'Niepoprawny adres email lub hasło.'
+      invalid: 'Niepoprawny login lub hasło.'
       locked: 'Twoje konto jest zablokowane.'
       last_attempt: "Masz jeszcze jedną próbę, zanim konto zostanie zablokowane."
-      not_found_in_database: "Niepoprawny email lub hasło"
+      not_found_in_database: "Niepoprawny login lub hasło"
       timeout: 'Sesja wygasła, aby kontynuować zaloguj się ponownie.'
       unauthenticated: 'Aby kontynuować, zaloguj lub zarejestruj się.'
       unconfirmed: 'Aby kontynuować, aktywuj konto.'
