Better authorization views.

--- a/config/locales/devise_views.pl.yml
+++ b/config/locales/devise_views.pl.yml
@@ -37,10 +37,14 @@ pl:
       new:
         create_account: "Załóż konto"
         heading: "Rejestracja"
+        or: "lub"
+        sign_up_with_facebook: "zarejestruj się za pomocą Facebooka"
     sessions:
       new:
         <<: *defaults
         heading: "Logowanie"
+        or: "lub"
+        sign_up_with_facebook: "zaloguj się za pomocą Facebooka"
     shared:
       links:
         <<: *defaults
