--- a/config/locales/application.pl.yml
+++ b/config/locales/application.pl.yml
@@ -10,6 +10,7 @@ pl:
     header:
       sign_in: "Zaloguj się"
       sign_out: "Wyloguj się"
+      sign_up: "Zarejestruj się"
   questions:
     confirm: "Jesteś pewien?"
   statements:
