--- a/config/locales/application.pl.yml
+++ b/config/locales/application.pl.yml
@@ -11,6 +11,10 @@ pl:
       sign_in: "Zaloguj się"
       sign_out: "Wyloguj się"
       sign_up: "Zarejestruj się"
+      sign_up_with_facebook: "Zaloguj się Facebookiem"
+  errors:
+    messages:
+      extension_white_list_error: "Złe rozszerzenie pliku."
   questions:
     confirm: "Jesteś pewien?"
   statements:
