Polish translations for view: show game.

--- a/config/locales/games.pl.yml
+++ b/config/locales/games.pl.yml
@@ -7,3 +7,6 @@ pl:
   games:
     new:
       heading: "Nowa gra"
+    show:
+      all_paragraphs: "Wszystkie paragrafy"
+      new_paragraph: "Dodaj paragraf"
