--- a/config/locales/paragraphs.pl.yml
+++ b/config/locales/paragraphs.pl.yml
@@ -4,9 +4,14 @@ pl:
       paragraph:
         content: "Treść"
   paragraphs:
+    index:
+      all_paragraphs: "Wszystkie paragrafy"
+      content: "Treść"
+      new_paragraph: "Dodaj paragraf"
     new:
-      heading: "Dodawanie fragmentu"
+      heading: "Dodawanie paragrafu"
     edit:
-      heading: "Edytowanie fragmentu"
+      heading: "Edytowanie paragrafu"
     show:
       new_choice: "Dodaj odpowiedź"
+      new_head: "Dodaj paragraf docelowy"
