Helper for basic form action container.

--- a/config/locales/application.pl.yml
+++ b/config/locales/application.pl.yml
@@ -19,7 +19,9 @@ pl:
     confirm: "Jesteś pewien?"
   statements:
     access_denied: "Nie masz dostępu do tej strony."
+    cancel: "Anuluj"
     created: "Utworzono"
     destroyed: "Usunięto"
+    or: " lub "
     login_required: "Logowanie wymagane"
     updated: "Zapisano zmiany"
