--- a/config/locales/games.pl.yml
+++ b/config/locales/games.pl.yml
@@ -11,3 +11,4 @@ pl:
       all_paragraphs: "Wszystkie paragrafy"
       new_paragraph: "Dodaj paragraf"
       play: "Graj"
+      publish: "Opublikuj"
