Show game mark in game#show

--- a/config/locales/games.pl.yml
+++ b/config/locales/games.pl.yml
@@ -7,6 +7,9 @@ pl:
   games:
     edit:
       heading: "Edytowanie gry"
+    mark_form:
+      change_mark: "Zmień ocenę"
+      mark: "Oceń"
     new:
       heading: "Nowa gra"
     show:
