User favorite games.

--- a/config/locales/users.pl.yml
+++ b/config/locales/users.pl.yml
@@ -20,4 +20,5 @@ pl:
   users:
     show:
       created_games: "Stworzone gry"
+      favorite_games: "Najwyżej ocenione"
       new_game: "Stwórz nową grę"
