--- a/config/locales/home.pl.yml
+++ b/config/locales/home.pl.yml
@@ -2,6 +2,7 @@ pl:
   home:
     index:
       latest_games: "Najnowsze gry"
+      most_popular_authors: "Najpopularniejsi autorzy"
       most_popular_games: "Najpopularniejsze gry"
       sign_in: "Zaloguj się"
       sign_up: "Załóż konto"
