--- a/config/locales/application.pl.yml
+++ b/config/locales/application.pl.yml
@@ -8,10 +8,12 @@ pl:
     show: "Pokaż"
   application:
     header:
+      search_query: "Wyszukaj..."
       sign_in: "Zaloguj się"
       sign_out: "Wyloguj się"
       sign_up: "Zarejestruj się"
       sign_up_with_facebook: "Zaloguj się Facebookiem"
+      submit_search: "Szukaj"
   errors:
     messages:
       extension_white_list_error: "Złe rozszerzenie pliku."
