--- a/config/locales/users.pl.yml
+++ b/config/locales/users.pl.yml
@@ -20,8 +20,10 @@ pl:
   users:
     show:
       created_games: "Gry użytkownika"
-      edit_profile: "Edytuj profil"
       favorite_games: "Najwyżej ocenione"
-      new_game: "Stwórz grę"
       no_user_games: "Uzytkownik nie stworzył jeszcze żadnej gry."
       no_user_favorite_games: "Użytkownik nie ocenił jeszcze żadnej gry."
+    aside_profile:
+      edit_profile: "Edytuj profil"
+      new_game: "Stwórz grę"
+      
