Manage users lik for admins.

--- a/config/locales/application.pl.yml
+++ b/config/locales/application.pl.yml
@@ -8,6 +8,7 @@ pl:
     show: "Pokaż"
   application:
     header:
+      manage_users: "Zarządzaj użytkownikami"
       search_query: "Wyszukaj..."
       sign_in: "Zaloguj się"
       sign_out: "Wyloguj się"
