--- a/config/locales/application.pl.yml
+++ b/config/locales/application.pl.yml
@@ -13,7 +13,7 @@ pl:
       sign_in: "Zaloguj się"
       sign_out: "Wyloguj się"
       sign_up: "Zarejestruj się"
-      sign_up_with_facebook: "Zaloguj się Facebookiem"
+      sign_up_with_facebook: "Połącz Facebookiem"
       submit_search: "Szukaj"
   errors:
     messages:
