User aside profile.

--- a/config/locales/users.pl.yml
+++ b/config/locales/users.pl.yml
@@ -20,6 +20,7 @@ pl:
   users:
     aside_profile:
       edit_profile: "Edytuj profil"
+      games: "Gry użytkownika"
       new_game: "Stwórz grę"
       saves: "Zapisane gry"
     games:
