--- a/config/locales/application.pl.yml
+++ b/config/locales/application.pl.yml
@@ -7,6 +7,8 @@ pl:
     set_as_first: "Ustaw jako pierwszy"
     show: "Pokaż"
   application:
+    footer:
+      masters_notice: "Autorem niniejszego serwisu jest Jan Bator. Serwis ten stanowi integralną część pracy magisterskiej z Elektronicznego Przetwarzania Informacji, przygotowywanej pod kierunkiem dra hab. Janusza Jurka na Wydziale Zarządzania i Komunikacji Społecznej Uniwersytetu Jagiellońskiego."
     header:
       manage_users: "Zarządzaj użytkownikami"
       search_query: "Wyszukaj..."
@@ -18,9 +20,6 @@ pl:
   errors:
     messages:
       extension_white_list_error: "Złe rozszerzenie pliku."
-  layouts:
-    application:
-      masters_notice: "Autorem niniejszego serwisu jest Jan Bator. Serwis ten stanowi integralną część pracy magisterskiej z Elektronicznego Przetwarzania Informacji, przygotowywanej pod kierunkiem dra hab. Janusza Jurka na Wydziale Zarządzania i Komunikacji Społecznej Uniwersytetu Jagiellońskiego."
   questions:
     confirm: "Jesteś pewien?"
   statements:
