Add Final mark to final paragraphs.

--- a/config/locales/paragraphs.pl.yml
+++ b/config/locales/paragraphs.pl.yml
@@ -24,6 +24,7 @@ pl:
       destroy_paragraph: "Usuń paragraf"
       edit_choice: "Edytuj odpowiedź"
       edit_paragraph: "Edytuj paragraf"
+      final: "*** KONIEC ***"
       new_choice: "Dodaj odpowiedź"
       new_child_paragraph: "Dodaj paragraf docelowy"
       parent_actions: "Wybory prowadzące do tego paragrafu"
