Show parent choice in paragraph form.

--- a/config/locales/paragraphs.pl.yml
+++ b/config/locales/paragraphs.pl.yml
@@ -12,6 +12,8 @@ pl:
   paragraphs:
     edit:
       heading: "Edytowanie paragrafu"
+    form:
+      choice: "Odpowiedź prowadząca do tego paragrafu" 
     index:
       all_paragraphs: "Paragrafy - %{filter}"
       content: "Treść"
